OK .... cleanup in matrix operations. Closes #9

--- a/neuralnet/Makefile.in
+++ b/neuralnet/Makefile.in
@@ -13,6 +13,7 @@ CFLAGS += -I$(C_NPY_LIBPATH)
 LDFLAGS += -L$(C_NPY_LIBPATH) -lc_npy
 
 # This should obly be turned off when you do not need any training.
+#DEFINES = -DTRAINING_FEATURES -DUSE_CBLAS
 DEFINES = -DTRAINING_FEATURES
 CFLAGS += $(DEFINES)
 
