--- a/optimizer/Makefile.in
+++ b/optimizer/Makefile.in
@@ -1,5 +1,5 @@
 
-CC     = gcc
+# CC     = gcc
 CFLAGS = -std=c99 -Wall -Wextra -Wno-override-init -O3 -mavx2 -mfma -fopenmp $(dbg) $(profile)
 LDFLAGS = $(profile) 
 
