--- a/optimizer/Makefile.in
+++ b/optimizer/Makefile.in
@@ -1,6 +1,5 @@
 
-# CC     = gcc
-CFLAGS = -std=c99 -Wall -Wextra -Wno-override-init -O3 -mavx2 -mfma -fopenmp $(dbg) $(profile)
+CFLAGS = -std=c99 -Wall -Wextra $(w_init_override) -O3 -mavx2 -mfma -fopenmp $(dbg) $(profile)
 LDFLAGS = $(profile) 
 
 src = $(wildcard *.c)
