New neuralnet_load() to replace neuralnet_new(). closes issue #24

--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -53,6 +53,6 @@ clean:
 
 .PHONY: distclean
 distclean:
-	$(RM) $(obj) $(testprogs) reference.py metrics.py  reference.pyc metrics.pyc  test_activation.c test_loss.c test_metrics.c Makefile *~
+	$(RM) $(obj) $(testprogs) reference.py metrics.py  reference.pyc metrics.pyc  test_activation.c test_loss.c test_metrics.c Makefile tmp_*.npz *~
 	$(RM) -r __pycache__
 
