--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "c_npy"]
+[submodule "npy_array"]
 	path = npy_array
-	url = git@github.com:oysteijo/c_npy.git
+	url = git@github.com:oysteijo/npy_array.git
