--- a/examples/Makefile.in
+++ b/examples/Makefile.in
@@ -11,9 +11,11 @@ obj = $(src:.c=.o)
 # dependency library
 NPY_ARRAY_LIBPATH = ../npy_array
 NEURALNET_LIBPATH = ../neuralnet
-CFLAGS += -I$(NPY_ARRAY_LIBPATH) -I$(NEURALNET_LIBPATH)
+CALLBACK_LIBPATH = ../callback
+CFLAGS += -I$(NPY_ARRAY_LIBPATH) -I$(NEURALNET_LIBPATH) -I..
 LDFLAGS += -L$(NEURALNET_LIBPATH) -lneuralnet
 LDFLAGS += -L$(NPY_ARRAY_LIBPATH) -lnpy_array
+LDFLAGS += -L$(CALLBACK_LIBPATH) -lcallback
 LDFLAGS += -lm
 
 #DEFINES = -DUSE_CBLAS
