A tiny bit more cleanup

--- a/examples/Makefile.in
+++ b/examples/Makefile.in
@@ -16,7 +16,7 @@ CFLAGS += -I$(NPY_ARRAY_LIBPATH) -I$(NEURALNET_LIBPATH) -I..
 LDFLAGS += -L$(NEURALNET_LIBPATH) -lneuralnet
 LDFLAGS += -L$(NPY_ARRAY_LIBPATH) -lnpy_array
 LDFLAGS += -L$(CALLBACK_LIBPATH) -lcallback
-LDFLAGS += -lm
+LDFLAGS += -lzip -lm
 
 #DEFINES = -DUSE_CBLAS
 DEFINES = 
