Update save, update npy_submodule, prepate for GitHub actions

--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -14,6 +14,7 @@ NEURALNET_LIBPATH = ../src
 CFLAGS += -I$(NPY_ARRAY_LIBPATH) -I$(NEURALNET_LIBPATH)
 LDFLAGS += -L$(NEURALNET_LIBPATH) -lsimd_neuralnet
 LDFLAGS += -L$(NPY_ARRAY_LIBPATH) -lnpy_array
+LDFLAGS += -ldl
 LDFLAGS += -lm
 
 #DEFINES = -DUSE_CBLAS
