--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,3 +28,8 @@ jobs:
          cd src
          ./configure
          make
+    - name: Build examples (Mushrooms and MNIST)
+      run: |
+         cd examples
+         ./configure
+         make
