--- a/examples/Makefile.in
+++ b/examples/Makefile.in
@@ -14,7 +14,7 @@ NEURALNET_LIBPATH = ../src
 CFLAGS += -I$(NPY_ARRAY_LIBPATH) -I$(NEURALNET_LIBPATH) -I..
 LDFLAGS += -L$(NEURALNET_LIBPATH) -lsimd_neuralnet
 LDFLAGS += -L$(NPY_ARRAY_LIBPATH) -lnpy_array
-LDFLAGS += -lzip -lm
+LDFLAGS += -lzip -ldl -lm
 
 #DEFINES = -DUSE_CBLAS
 DEFINES = 
