Split MNIST example

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,15 +43,21 @@ jobs:
       run: |
          cd examples
          ./example_02
-    - name: Run MNIST example.
+    - name: Download MNIST data.
       run: |
          cd examples
          wget http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz
          wget http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz
          wget http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz
-         wget http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz        
+         wget http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz         
+    - name: unzip MNIST data.
+      run: |
+         cd examples
          gunzip train-images-idx3-ubyte.gz
          gunzip train-labels-idx1-ubyte.gz
          gunzip t10k-images-idx3-ubyte.gz
-         gunzip t10k-labels-idx3-ubyte.gz
+         gunzip t10k-labels-idx3-ubyte.gz         
+    - name: unzip MNIST data.
+      run: |
+         cd examples
          ./example_03
