--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,3 +61,10 @@ jobs:
       run: |
          cd examples
          ./example_03
+    - name: Compile tests
+      run: |
+         cd tests
+         ./configure
+         make
+         make run
+
