First attempt to build and run tests (#44)
* First attempt to build and run tests

* Just some renaming in build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: C/C++ CI
+name: Build C with Makefiles
 
 on:
   push:
@@ -61,3 +61,10 @@ jobs:
       run: |
          cd examples
          ./example_03
+    - name: Compile and run tests
+      run: |
+         cd tests
+         ./configure
+         make
+         make run
+
