Tiny cleanup in Makefile.in in tests, fix in doxygen.cfg

--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -3,7 +3,7 @@
 ##     If you need changes below this line, edit Makefile.in     ##
 ## ------------------------------------------------------------- ##
 CFLAGS = -std=c99 -Wall -Wextra -O3 $(arch) $(dbg) $(profile)
-LDFLAGS = $(profile) 
+LDLIBS = $(profile) 
 
 src = $(wildcard *.c)
 obj = $(src:.c=.o)
@@ -12,22 +12,22 @@ obj = $(src:.c=.o)
 NPY_ARRAY_LIBPATH = ../npy_array
 NEURALNET_LIBPATH = ../src
 CFLAGS += -I$(NPY_ARRAY_LIBPATH) -I$(NEURALNET_LIBPATH)
-LDFLAGS += -L$(NEURALNET_LIBPATH) -lsimd_neuralnet
-LDFLAGS += -L$(NPY_ARRAY_LIBPATH) -lnpy_array
-LDFLAGS += -ldl
-LDFLAGS += -lm
+LDLIBS += -L$(NEURALNET_LIBPATH) -lsimd_neuralnet
+LDLIBS += -L$(NPY_ARRAY_LIBPATH) -lnpy_array
+LDLIBS += -ldl
+LDLIBS += -lm
 
 #DEFINES = -DUSE_CBLAS
 DEFINES = 
 
 ifeq ($(CC),gcc)
 	DEFINES += -Wno-override-init
-	LDFLAGS += -lgomp
+	LDLIBS += -lgomp
 endif
 
 ifeq ($(CC),clang)
 	DEFINES += -Wno-initializer-overrides
-	LDFLAGS += -lomp
+	LDLIBS += -lomp
 endif
 
 
@@ -36,29 +36,16 @@ CFLAGS += $(DEFINES)
 
 testprogs = test_neuralnet test_sgd test_backpropagation test_activation test_loss test_metrics
 
-testers: $(testprogs) 
+all: $(testprogs) 
 
-test_neuralnet: test_neuralnet.o 
-	$(CC) -o $@ $? $(LDFLAGS)
-test_backpropagation: test_backpropagation.o 
-	$(CC) -o $@ $? $(LDFLAGS)
-test_sgd: test_sgd.o
-	$(CC) -o $@ $? $(LDFLAGS)
-test_activation: test_activation.o 
-	$(CC) -o $@ $? $(LDFLAGS)
-test_loss: test_loss.o 
-	$(CC) -o $@ $? $(LDFLAGS)
-test_metrics: test_metrics.o 
-	$(CC) -o $@ $? $(LDFLAGS)
-
-test_activation.c: generate_tests.py reference.py metrics.py
+test_activation.c: generate_tests.py neuralnet.py metrics.py
 	python3 generate_tests.py
-test_loss.c: generate_tests.py reference.py metrics.py
+test_loss.c: generate_tests.py neuralnet.py metrics.py
 	python3 generate_tests.py
-test_metrics.c: generate_tests.py reference.py metrics.py
+test_metrics.c: generate_tests.py neuralnet.py metrics.py
 	python3 generate_tests.py
 
-reference.py:
+neuralnet.py:
 	ln -sf ../reference/neuralnet.py
 metrics.py:
 	ln -sf ../reference/metrics.py
@@ -74,6 +61,6 @@ clean:
 
 .PHONY: distclean
 distclean:
-	$(RM) $(obj) $(testprogs) reference.py metrics.py  reference.pyc metrics.pyc  test_activation.c test_loss.c test_metrics.c Makefile tmp_*.npz *~
+	$(RM) $(obj) $(testprogs) neuralnet.py metrics.py  neuralnet.pyc metrics.pyc  test_activation.c test_loss.c test_metrics.c Makefile tmp_*.npz *~
 	$(RM) -r __pycache__
 
