--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,5 +2,8 @@
   "image": "mcr.microsoft.com/devcontainers/universal:2",
   "features": {   
   },
-  "postCreateCommand": "git submodule update --init --recursive"
+  "postCreateCommand": [
+    "git submodule update --init --recursive",
+    "sudo apt install libzip-dev"
+    ]
 }
