Add example with strnge sizes

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,7 +59,11 @@ jobs:
     - name: Run MNIST example. (May take some minutes)
       run: |
          cd examples
-         ./example_03
+         ./example_03 
+      name: Run test_sgd example with odd sizes
+         run: |
+            cd examples
+            ./test_sgd
     - name: Compile and run tests
       run: |
          cd tests
