--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,7 +60,7 @@ jobs:
       run: |
          cd examples
          ./example_03 
-      name: Run test_sgd example with odd sizes
+    - name: Run test_sgd example with odd sizes
          run: |
             cd examples
             ./test_sgd
