--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -4,10 +4,9 @@ SHELL := /bin/bash
 
 CC      = gcc
 INCLUDE += -I.
-CFLAGS  += -std=c99 $(INCLUDE) -Wall -Wextra -O3 -fopenmp $(arch) $(dbg) $(profile)
+CFLAGS  += -std=c99 $(DEFINE) $(INCLUDE) $(BLAS_CFLAGS) -Wall -Wextra -O3 -fopenmp $(arch) $(dbg) $(profile) 
 SED     = sed
 RANLIB  = ranlib
-
 obj = $(src:.c=.o)
 dep = $(obj:.o=.d)  # one dependency file for each source
 
