--- a/examples/Makefile.in
+++ b/examples/Makefile.in
@@ -2,7 +2,8 @@
 ##         The rest of this file comes from Makefile.in          ##
 ##     If you need changes below this line, edit Makefile.in     ##
 ## ------------------------------------------------------------- ##
-CFLAGS = -std=c99 -Wall -Wextra -O3 $(arch) $(dbg) $(profile)
+#CFLAGS = -std=c99 -Wall -Wextra -O3 $(arch) $(dbg) $(profile)
+CFLAGS = -std=c99 $(DEFINE) $(INCLUDE) $(BLAS_CFLAGS) -Wall -Wextra -O3 -fopenmp $(arch) $(dbg) $(profile) 
 LDFLAGS = $(profile) 
 
 src = $(wildcard *.c)
@@ -14,7 +15,7 @@ NEURALNET_LIBPATH = ../src
 CFLAGS += -I$(NPY_ARRAY_LIBPATH) -I$(NEURALNET_LIBPATH) -I..
 LDFLAGS += -L$(NEURALNET_LIBPATH) -lsimd_neuralnet
 LDFLAGS += -L$(NPY_ARRAY_LIBPATH) -lnpy_array
-# LDFLAGS += `pkg-config --libs openblas`
+LDFLAGS += `pkg-config --libs openblas`
 LDFLAGS += -lzip -ldl -lm
 
 ifeq ($(CC),gcc)
@@ -31,7 +32,7 @@ DEFINE += -Wno-unused-parameter
 
 CFLAGS += $(DEFINE)
 
-examples = example_01 example_02 example_03 test_sgd
+examples = example_01 example_02 example_02b example_03 test_sgd general-trainer
 
 all: $(examples) 
 
