--- a/npy_array/example/Makefile
+++ b/npy_array/example/Makefile
@@ -1,9 +1,9 @@
-CC = gcc
-CFLAGS = -std=c99 -Wall -Wextra -O3 -I.. 
-LDLIBS = -L.. -lnpy_array
+CC ?= gcc
+CFLAGS += -std=c99 -Wall -Wextra -O3 -I..
+LDLIBS += -L.. -lnpy_array
 
 SOURCES = $(wildcard *.c)
-PROGRAMS = $(patsubst %.c,%,$(SOURCES)) 
+PROGRAMS = $(patsubst %.c,%,$(SOURCES))
 
 all: $(PROGRAMS)
 
